--- a/public/views/user/allProfile.ejs
+++ b/public/views/user/allProfile.ejs
@@ -1,11 +1,8 @@
 <html>
 <head>
-    <head>
 <link rel="stylesheet" href="/CSS/view.css">
   <title>BiyeShadi.com</title>
-  
 </head>
-</head>  
 <body>
   
    <div id="header">
@@ -21,9 +18,9 @@
       </ul>
 
   </div>
-      <h1>List of all users</h1>
+      <h1>List  all users</h1>
       
-<% console.log(users) %>
+
   <% for(var i=0; i<users.length; i++) { %>
     
     <h1>Name:<%= users[i].firstName+users[i].lastName%></h1>
@@ -51,12 +48,10 @@
                  <h3>Blood Color:<%= users[i].bloodGroup%></h3>
                   <h3>Previous Marital Status:<%= users[i].previousMaritalStatus%></h3>
                    <h3>Medical Test Status:<%= users[i].medicalTestStatus%></h3>
-    <h3><%= users[i].created%></h3><br><br><br>
-    
-    
-    
+                    <h3><%= users[i].created%></h3><br>
     
     <% } %>
+                        
   </body>  
 </html> 
       
